# raspberrypi-pico

./: .gitignore  CMakeLists.txt  README.md  install.sh
blink/: blink.c
src/: CMakeLists.txt
